# new_admin_panel_sprint_3

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
etl/: dockerfile
etl/postgres_to_es/: ElasticSearchClient.py  PostgresClient.py  StateManager.py  Transformer.py  backoff.py  config.py  logging_config.py  main.py
project/simple_project/: .env_example  docker-compose.yml
project/simple_project/app/: Dockerfile  run_uwsgi.sh
project/simple_project/app/example/: asgi.py  settings.py  wsgi.py
project/simple_project/app/movies/api/v1/: views.py
project/simple_project/app/movies/locale/en/LC_MESSAGES/: django.po
project/simple_project/app/movies/locale/ru/LC_MESSAGES/: django.po
project/simple_project/app/movies/migrations/: 0002_alter_personfilmwork_role.py
project/simple_project/app/uwsgi/: uwsgi.ini
project/simple_project/configs/: site.conf
