[tool.poetry]
name = "new-admin-panel-sprint-3"
version = "0.1.0"
description = ""
authors = ["Denis <den-nd.96@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
django = "5.0.4"
django-cors-headers = "4.5.0"
psycopg = "3.1.18"
psycopg-binary = "3.1.18"
python-dotenv = "1.0.1"
split-settings = "1.0.0"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"
uwsgi = "2.0.27"
elasticsearch = "^8.15.1"
backoff = "^2.2.1"
pydantic = "^2.9.2"
logging = "^0.4.9.6"
requests = "^2.32.3"
flake8 = "^7.1.1"
black = "^24.10.0"

[tool.flake8]
max-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
